--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Place of Birth:</strong> Jakarta</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 24 Juni 1998</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City: Depok, Jawa Barat</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Depok, Jawa Barat</li>
                 </ul>
               </div>
               <div class="col-lg-6">
